--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.9",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
